change minimum input font-size to 1rem to prevent autozooming on mobile

--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -43,6 +43,7 @@ body {
 
 input {
   border-radius: 0;
+  padding: 0;
 }
 
 /* Disable autofill after form submission */
