--- a/client/src/pages/Profile/CreateTitle.module.css
+++ b/client/src/pages/Profile/CreateTitle.module.css
@@ -25,6 +25,6 @@
 
 @media (max-width: 700px) {
   .CreateTitle__input {
-    font-size: clamp(0.8rem, 0.7rem + 1vw, 1.125rem);
+    font-size: clamp(1rem, 0.7rem + 1vw, 1.125rem);
   }
 }
