--- a/client/src/pages/Profile/EditTitle.module.css
+++ b/client/src/pages/Profile/EditTitle.module.css
@@ -24,7 +24,7 @@
 }
 
 @media (max-width: 700px) {
-  .CreateTitle__input {
-    font-size: clamp(0.8rem, 0.7rem + 1vw, 1.125rem);
+  .EditTitle__input {
+    font-size: clamp(1rem, 0.7rem + 1vw, 1.125rem);
   }
 }
