--- a/client/src/pages/Search/ModalCreate.module.css
+++ b/client/src/pages/Search/ModalCreate.module.css
@@ -2,7 +2,7 @@
   background-color: var(--grey-extra-light);
   color: var(--grey-extra-dark);
   font-family: Roboto;
-  font-size: 0.9rem;
+  font-size: 1rem;
   padding: 0 0.6rem;
   border: none;
   width: 60%;
